[tool.poetry]
name = "heart-library"
version = "0.4.4"
description = "Hardened Extension of the Adversarial Robustness Toolbox (HEART) supports assessment of adversarial AI vulnerabilities in Test & Evaluation workflows."
readme = "README.md"
license = "MIT"
repository = "https://github.com/IBM/heart-library"
packages = [{include = "heart_library", from = "src" }]
keywords = [
    "machine learning",
    "adversarial ai",
    "evasion",
]

authors = ["Mark Baker, Jordan Fischer, Kieran Fraser, Jackson Lee, Adam Lockwood, Stekunda Henry"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools.package-data]
heart_library = ["py.typed"]


# HEART Required Dependences
[tool.poetry.dependencies]
python = ">=3.9, <3.12"
adversarial-robustness-toolbox = ">=1.17.1"
maite = ">=0.6.0, <0.7.0"
numpy = ">=1.18.5, <2"
scikit-learn = ">=0.22.2"
six = "*"
setuptools = "*"
tqdm = "*"


# HEART Optional Dependencies
datasets = { version = ">=2.18.0", optional = true }
jupyter = { version = "*", optional = true}
matplotlib = { version = "*", optional = true }
multiprocess = { version = "*", optional = true }
numba = { version = "*", optional = true }
pandas = { version = "*", optional = true }
Pillow = { version = "*", optional = true }
pycocotools = { version = "*", optional = true }
sphinx = { version = ">=4.2.0", optional = true }
sphinx-charts = { version = ">=0.2.1", optional = true }
sphinx-design = { version = ">=0.6.1", optional = true }
furo = { version = "*", optional = true }
torch = { version = "<=2.3.1", optional = true }  # https://github.com/IBM/heart-library/issues/1
torchvision = { version = "*", optional = true }
timm = { version = "*", optional = true }
opencv-python = { version = "*", optional = true }
transformers = { version = "*", optional = true }
kornia = { version = "*", optional = true }
torchmetrics = { version = "*", optional = true }
memory-profiler = { version = "*", optional = true }
pympler = { version = "*", optional = true }
GPUtil = { version = "*", optional = true }
yolov5 = { version = "*", optional = true, markers = "python_version >= '3.10'" }
huggingface_hub = { version = "<0.25.0", optional = true }  # Resolves yolov5 incompatibility (GitLab Issue #437)

# All Optional Dependencies
[tool.poetry.extras]
all = [
    "datasets",
    "jupyter",
    "matplotlib",
    "multiprocess",
    "numba",
    "pandas",
    "Pillow",
    "pycocotools",
    "torch",
    "torchvision",
    "opencv-python",
    "timm",
    "transformers",
    "kornia",
    "torchmetrics",
    "yolov5",
    "huggingface_hub",
]


# Optional Individual Framework Dependencies
pytorch = ["torch", "torchvision", "torchmetrics"]


# Optional Non-Framework Dependencies
non_framework = [
    "datasets",
    "jupyter",
    "matplotlib",
    "multiprocess",
    "numba",
    "pandas",
    "Pillow",
    "pycocotools",
    "opencv-python",
    "timm",
    "transformers",
    "kornia",
]


# Optional Image Classification Dependencies
image_classification = [
    "torch",
    "torchvision",
    "transformers",
]


# Optional Object Detection Dependencies
object_detection = [
    "torch",
    "opencv-python",
    "pycocotools",
    "yolov5",
    "huggingface_hub",
]


# Optional Jupyter Notebook Dependencies
notebooks = [
    "jupyter",
    "matplotlib",
    "pandas",
    "kornia",
]


# Optional Sphinx Dependencies
docs = [
    "sphinx",
    "sphinx-charts",
    "sphinx-design",
    "furo"
]


# Optional Script Dependencies
script = [
    "memory-profiler",
    "pympler",
    "GPUtil",
]


# HEART Dev Tools and Configurations
[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
lxml = "*"
nbmake = "*"
prettytable = "*"
pytest = "*"
pytest-flake8 = "*"
pytest-black = "*"
pytest-isort = "*"
pytest-mock = "*"
pytest-cov = "*"
pyright = "^1"


[tool.black]
line-length=120


[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
flake8-max-line-length = 120
addopts = "-vvv --cov=heart_library --cov-config=pyproject.toml --cov-report term"
testpaths = [
    "tests",
]
markers = [
    "skip_framework: marks a test to be skipped for specific framework values. Valid values are ('tensorflow' 'keras' 'mxnet' 'pytorch' 'scikitlearn')",
    "framework_agnostic: marks a test to be agnostic to frameworks and run only for one default framework",
    "skip_module: Skip the test if a module is not available in the current environment",
]


[tool.coverage.run]
omit = [
    "tests/*",
    "*/.cache/*",
    "conftest.py",
    "src/heart_library/config.py",
]
exclude_lines = [
    "if __name__ == '__main__':",  # Exclude the main block
    "pragma: no cover",            # Exclude lines with this pragma
    "raise NotImplementedError",   # Exclude lines raising NotImplementedError
    "raise AssertionError"          # Exclude lines raising AssertionError
]


[tool.pyright]
include = ["src/heart_library"]
stubPath = "typings/"
