[metadata]
description-file = README.md

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[tool:pytest]
flake8-max-line-length = 120
markers =
    skip_framework: marks a test to be skipped for specific framework values. Valid values are ("tensorflow" "keras" "mxnet" "pytorch" "scikitlearn")
    framework_agnostic: marks a test to be agnostic to frameworks and run only for one default framework
    skip_module: Skip the test if a module is not available in the current environment

[mypy]
ignore_missing_imports = True
